@@ -23,7 +23,7 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
  */
 
-#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101300
 
 #if USE(APPLE_INTERNAL_SDK)
 
@@ -37,4 +37,4 @@
 
 #endif
 
-#endif // __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200
+#endif // __MAC_OS_X_VERSION_MIN_REQUIRED >= 101300
