@@ -1,3 +1,15 @@
+2017-05-12  Timothy Horton  <timothy_horton@apple.com>
+
+        Don't use LinkPresentation URL shortening if it's not available
+        https://bugs.webkit.org/show_bug.cgi?id=172064
+        <rdar://problem/32169232>
+
+        Rubber-stamped by Wenson Hsieh.
+
+        * platform/mac/DragImageMac.mm:
+        (WebCore::LinkImageLayout::LinkImageLayout):
+        * platform/spi/cocoa/LinkPresentationSPI.h:
+
 2017-05-11  Simon Fraser  <simon.fraser@apple.com>
 
         Incorrect position when dragging jQuery Draggable elements with position fixed after pinch zoom
